@@ -34,6 +34,10 @@ OCaml 4.04.0:
 
 - PR#7200, GPR#539: Improve, fix, and add test for parsing/pprintast.ml
   (Runhang Li, David Sheets, Alain Frisch)
+
+- GPR#351: make driver/pparse.ml functions type-safe
+  (Gabriel Scherer, Dmitrii Kosarev, review by Jérémie Dimino)
+
 - GPR#548: empty documentation comments
   (Florian Angeletti)
 
